[package]
name = "rshs-rcj-lw-devices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpi_build_hat_serial = { git = "https://github.com/rshs-robotics-club/rpi_build_hat_serial.git", rev = "3846264" }
rppal = "0.17.1"
hc-sr04 = "0.1.1"
nalgebra = "0.32.4"
libm = "0.2.8"
