[package]
name = "rshs-rcj-lw-devices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpi_build_hat_serial = { git = "https://github.com/rshs-robotics-club/rpi_build_hat_serial.git", branch = "master" }
rppal = { version = "0.18.0", features = ["hal"] }
hc-sr04 = "0.1.1"
nalgebra = "0.32.4"
libm = "0.2.8"
lsm303dlhc = "0.2.0"
