[package]
name = "rshs-rcj-lw-devices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.18.0", features = ["hal"] }
rpi_build_hat_serial = { git = "https://github.com/rshs-robotics-club/rpi_build_hat_serial.git", rev = "d4a182e" }
nalgebra = "0.32.4"
pollster = "0.3.0"
xca9548a = "1.0.0"
bno055 = "0.4.0"
bno080 = "0.1.3"
vl53l1x-uld = "2.0.1"
